misc cleanup 3